install_lib/grafana_ing.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: grafana
    namespace: kube-monitoring
  spec:
    rules:
    - host: grafana.local
      http:
        paths:
        - backend:
            service:
              name: kube-prometheus-stack-grafana
              port:
                number: 80
          path: /
          pathType: Prefix
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
